# torrust-tracker

./: .dockerignore  .env.local  .git-blame-ignore  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Containerfile  Dockerfile  LICENSE  Makefile  README  README.md  SECURITY.md  cSpell.json  compose.yaml  config.toml.local  configuration.toml  docker-compose.yml  rustfmt.toml  udpt.conf  udpt.docker.conf  udpt.toml
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  dependabot.yaml  labels.json  test.yml
.github/workflows/: build.yml  build_release.yml  codecov.yml  container.yaml  contract.yaml  coverage.yaml  deployment.yaml  labels.yaml  projects.yaml  publish-docker-image.yml  publish_crate.yml  publish_docker_image.yml  release.yaml  rust.yml  test.yml  test_build_release.yml  test_docker.yml  testing.yaml
benches/: bench_connection_cookie.rs  generate_connection_id.rs  update_torrent.rs
contrib/bencode/: Cargo.toml  README.md
contrib/bencode/benches/: bencode_benchmark.rs  multi_kb.bencode
contrib/bencode/src/: cow.rs  error.rs  lib.rs
contrib/bencode/src/access/: bencode.rs  convert.rs  dict.rs  list.rs  mod.rs
contrib/bencode/src/mutable/: bencode_mut.rs  encode.rs  mod.rs
contrib/bencode/src/reference/: bencode_ref.rs  decode.rs  decode_opt.rs  mod.rs
contrib/bencode/test/: mod.rs
contrib/dev-tools/containers/: docker-build.sh  docker-install.sh  docker-run-local.sh  docker-run-public.sh
contrib/dev-tools/init/: install-local.sh
docker/: README.md
docs/: Makefile  benchmarking.md  book.toml  building.rst  conf.py  containers.md  index.rst  make.bat  profiling.md  release_process.md  restapi.rst  udpt.conf.rst  udpt.rst
docs/_templates/: layout.html
docs/adrs/: 20240227164834_use_plural_for_modules_containing_collections.md  README.md
docs/media/: mandelbrot_2048x2048_infohash_v1.png.torrent  mandelbrot_2048x2048_infohash_v1.png.torrent.json
docs/src/: ABOUT.md  API.md  BUILD.md  CONFIG.md  README.md  SUMMARY.md  TRACKING_MODES.md  USAGE.md  api.md  build.md  config.md  tracking_modes.md  usage.md
licensing/: agpl-3.0.md  cc-by-sa.md  contributor_agreement_v01.md  file_header_agplv3.txt
licensing/old_commits/: cc0.md  mit-0.md
migrations/: README.md
migrations/mysql/: 20240730183000_torrust_tracker_create_all_tables.sql  20240730183500_torrust_tracker_keys_valid_until_nullable.sql
migrations/sqlite/: 20240730183000_torrust_tracker_create_all_tables.sql  20240730183500_torrust_tracker_keys_valid_until_nullable.sql
share/container/: entry_script_sh  message
share/default/config/: lib.rs  tracker.container.mysql.toml  tracker.container.sqlite3.toml  tracker.development.sqlite3.toml  tracker.e2e.container.sqlite3.toml  tracker.udp.benchmarking.toml  (+1 more)
src/: MessageQueue.hpp  WebApp.cpp  WebApp.hpp  app.rs  common.rs  config.rs  database.rs  exceptions.h  helpers.rs  http_api_server.rs  http_server.rs  key_manager.rs  lib.rs  located_error.rs  logging.cpp  logging.h  logging.hpp  logging.rs  main.c  main.cpp  main.rs  multiplatform.h  mysql_database.rs  request.rs  response.rs  server.rs  service.cpp  service.hpp  settings.c  settings.cpp  settings.h  settings.hpp  setup.rs  sqlite_database.rs  stackvec.rs  stats.rs  tools.c  tools.h  torrent.rs  tracker.cpp  (+11 more)
src/api/: mod.rs  routes.rs  server.rs
src/apis/: error.rs  handlers.rs  mod.rs  responses.rs  routes.rs  server.rs  settings.rs
src/bootstrap/: app.rs  config.rs  logging.rs  mod.rs  stats.rs  tracing.rs
src/checker/: app.rs  config.rs  console.rs  logger.rs  service.rs
src/console/: mod.rs  profiling.rs
src/core/: auth.rs  error.rs  mod.rs  peer.rs  peer_tests.rs  statistics.rs  torrent.rs
src/databases/: database.rs  driver.rs  error.rs  mod.rs  mysql.rs  settings.rs  sqlite.rs
src/db/: database.cpp  database.h  database.hpp  driver_sqlite.c  driver_sqlite.cpp  driver_sqlite.hpp
src/e2e/: docker.rs  logs_parser.rs  mod.rs  runner.rs  temp_dir.rs  tracker_checker.rs  tracker_container.rs
src/errors/: mod.rs  settings.rs  settings_manager.rs  wrappers.rs
src/http/: error.rs  filters.rs  handlers.rs  httpserver.cpp  httpserver.hpp  mod.rs  percent_encoding.rs  request.rs  response.rs  routes.rs  server.rs  tracker_interface.rs  webapp.cpp  webapp.hpp
src/jobs/: http_tracker.rs  log_statistics.rs  mod.rs  persistent_torrent_statistics.rs  torrent_cleanup.rs  tracker_api.rs  tracker_apis.rs  udp_tracker.rs
src/protocol/: clock.rs  common.rs  crypto.rs  info_hash.rs  mod.rs  utils.rs
src/servers/: custom_axum_server.rs  logging.rs  mod.rs  registar.rs  service.rs  signals.rs
src/settings/: manager.rs  mod.rs  old_settings.rs
src/shared/: crypto.rs  handle.rs  mem_size.rs  mod.rs
src/torrust_http_tracker/: errors.rs  filters.rs  handlers.rs  mod.rs  request.rs  response.rs  routes.rs  server.rs
src/torrust_udp_tracker/: errors.rs  handlers.rs  mod.rs  request.rs  response.rs  server.rs
src/tracker/: auth.rs  error.rs  key.rs  mod.rs  mode.rs  peer.rs  statistics.rs  torrent.rs  tracker.rs
src/udp/: byte_array_32.rs  connection_cookie.rs  connection_id.rs  error.rs  errors.rs  handlers.rs  mod.rs  packet_handler.rs  request.rs  request_handler.rs  server.rs  time_bound_pepper.rs
test-helpers/: Cargo.toml
test-helpers/src/: lib.rs  port_pool.rs
tests/: README.md  api.rs  http_tracker.rs  integration.rs  integration_tests.rs  main.cpp  tracker_api.rs  udp.rs  udp_tracker.rs  wrk_benchmark_announce.lua
tests/api/: asserts.rs  client.rs  integrations_tests.rs  mod.rs  server.rs  test_environment.rs
tests/clients/: mod.rs
tests/common/: app.rs  clock.rs  fixtures.rs  http.rs  logging.rs  mod.rs  tracker.rs  udp.rs
tests/http/: asserts.rs  asserts_warp.rs  bencode.rs  client.rs  connection_info.rs  integration_tests.rs  mod.rs  requests.rs  responses.rs  server.rs  test_environment.rs
tests/servers/: mod.rs
tests/udp/: asserts.rs  client.rs  integration_tests.rs  mod.rs  server.rs  test_environment.rs
vs/: UDPT.sln
vs/UDPT/: UDPT.vcxproj  UDPT.vcxproj.filters
(+392 files in other folders)
