[package]
default-run = "torrust-tracker"
name = "torrust-tracker"
readme = "README.md"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace.package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
categories = ["network-programming", "web-programming"]
description = "A feature rich BitTorrent tracker."
documentation = "https://docs.rs/crate/torrust-tracker/"
edition = "2021"
homepage = "https://torrust.com/"
keywords = ["bittorrent", "file-sharing", "peer-to-peer", "torrent", "tracker"]
license = "AGPL-3.0-only"
publish = true
repository = "https://github.com/torrust/torrust-tracker"
rust-version = "1.72"
version = "3.0.0-alpha.12-develop"

[dependencies]
anyhow = "1"
aquatic_udp_protocol = "0"
async-trait = "0"
axum = { version = "0", features = ["macros"] }
axum-client-ip = "0"
axum-extra = { version = "0", features = ["query"] }
axum-server = { version = "0", features = ["tls-rustls"] }
camino = { version = "1.1.6", features = ["serde", "serde1"] }
chrono = { version = "0", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
crossbeam-skiplist = "0.1"
dashmap = "6.0.0"
derive_more = "0"
figment = "0.10.18"
futures = "0"
futures-util = "0.3.30"
hex-literal = "0"
http-body = "1.0.0"
hyper = "1"
hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
lazy_static = "1"
multimap = "0"
parking_lot = "0.12.1"
percent-encoding = "2"
pin-project-lite = "0.2.14"
r2d2 = "0"
r2d2_mysql = "24"
r2d2_sqlite = { version = "0", features = ["bundled"] }
rand = "0"
regex = "1.10.5"
reqwest = { version = "0", features = ["json"] }
ringbuf = "0"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0"
serde_bytes = "0"
serde_json = { version = "1", features = ["preserve_order"] }
serde_repr = "0"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
torrust-tracker-clock = { version = "3.0.0-alpha.12-develop", path = "packages/clock" }
torrust-tracker-configuration = { version = "3.0.0-alpha.12-develop", path = "packages/configuration" }
torrust-tracker-contrib-bencode = { version = "3.0.0-alpha.12-develop", path = "contrib/bencode" }
torrust-tracker-located-error = { version = "3.0.0-alpha.12-develop", path = "packages/located-error" }
torrust-tracker-primitives = { version = "3.0.0-alpha.12-develop", path = "packages/primitives" }
torrust-tracker-torrent-repository = { version = "3.0.0-alpha.12-develop", path = "packages/torrent-repository" }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0", features = ["compression-full", "cors", "propagate-header", "request-id", "trace"] }
trace = "0"
tracing = "0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zerocopy = "0.7.33"

[package.metadata.cargo-machete]
ignored = ["crossbeam-skiplist", "dashmap", "figment", "parking_lot", "serde_bytes"]

[dev-dependencies]
local-ip-address = "0"
mockall = "0"
torrust-tracker-test-helpers = { version = "3.0.0-alpha.12-develop", path = "packages/test-helpers" }

[workspace]
members = [
    "contrib/bencode",
    "packages/configuration",
    "packages/located-error",
    "packages/primitives",
    "packages/test-helpers",
    "packages/torrent-repository",
]

[profile.dev]
debug = 1
lto = "fat"
opt-level = 1

[profile.release]
debug = 1
lto = "fat"
opt-level = 3

[profile.release-debug]
debug = true
inherits = "release"
