[package]
name = "torrust-tracker-contrib-bencode"
description = "(contrib) Efficient decoding and encoding for bencode."
keywords = ["library", "contrib", "bencode"]
readme = "README.md"

authors = [
    "Nautilus Cyberneering <info@nautilus-cyberneering.de>, Andrew <amiller4421@gmail.com>",
]
repository = "https://github.com/torrust/bittorrent-infrastructure-project"
license = "Apache-2.0"

documentation.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
error-chain = "0.12"

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "test"
path = "test/mod.rs"

[[bench]]
name = "bencode_benchmark"
harness = false
