[package]
description = "(contrib) Efficient decoding and encoding for bencode."
keywords = ["bencode", "contrib", "library"]
name = "torrust-tracker-contrib-bencode"
readme = "README.md"

authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Andrew <amiller4421@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/torrust/bittorrent-infrastructure-project"

documentation.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
error-chain = "0.12"

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "test"
path = "test/mod.rs"

[[bench]]
harness = false
name = "bencode_benchmark"
